gen/SlrParser.py
# Generated from /home/themhh/git/SLR-Compiler-Project/Grammar/Slr.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SlrParser ( Parser ):

    grammarFileName = "Slr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'topic '", "'search'", "'query'", "','", 
                     "'year_range'", "'to'", "'max_results'", "'filters'", 
                     "'exclude_keywords'", "'min_pages'", "'languages'", 
                     "'analyze'", "'summarize'", "'method'", "'max_length'", 
                     "'extract_fields'", "'keyword_cloud'", "'report'", 
                     "'format'", "'include_metadata'", "'output_path'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "METHID", "FORMAT", "LN", 
                      "BOOLEAN", "NUMBER", "DIGIT", "STRING", "LB", "RB", 
                      "LCB", "RCB", "COMMENT", "NEWLINE", "WS" ]

    RULE_start = 0
    RULE_program = 1
    RULE_topic = 2
    RULE_search = 3
    RULE_query = 4
    RULE_yearRange = 5
    RULE_maxResults = 6
    RULE_filters = 7
    RULE_excludeKeywords = 8
    RULE_minPages = 9
    RULE_languages = 10
    RULE_analyze = 11
    RULE_summarize = 12
    RULE_method = 13
    RULE_maxLength = 14
    RULE_extractFields = 15
    RULE_keywordCloud = 16
    RULE_report = 17
    RULE_format = 18
    RULE_includeMetadata = 19
    RULE_outputPath = 20
    RULE_optional_nl = 21
    RULE_mandatory_nl = 22

    ruleNames =  [ "start", "program", "topic", "search", "query", "yearRange", 
                   "maxResults", "filters", "excludeKeywords", "minPages", 
                   "languages", "analyze", "summarize", "method", "maxLength", 
                   "extractFields", "keywordCloud", "report", "format", 
                   "includeMetadata", "outputPath", "optional_nl", "mandatory_nl" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    METHID=22
    FORMAT=23
    LN=24
    BOOLEAN=25
    NUMBER=26
    DIGIT=27
    STRING=28
    LB=29
    RB=30
    LCB=31
    RCB=32
    COMMENT=33
    NEWLINE=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(SlrParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(SlrParser.EOF, 0)

        def getRuleIndex(self):
            return SlrParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SlrParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.program()
            self.state = 47
            self.match(SlrParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def topic(self):
            return self.getTypedRuleContext(SlrParser.TopicContext,0)


        def search(self):
            return self.getTypedRuleContext(SlrParser.SearchContext,0)


        def filters(self):
            return self.getTypedRuleContext(SlrParser.FiltersContext,0)


        def analyze(self):
            return self.getTypedRuleContext(SlrParser.AnalyzeContext,0)


        def report(self):
            return self.getTypedRuleContext(SlrParser.ReportContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = SlrParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.topic()
            self.state = 50
            self.search()
            self.state = 51
            self.filters()
            self.state = 52
            self.analyze()
            self.state = 53
            self.report()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopicContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SlrParser.STRING, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_topic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopic" ):
                listener.enterTopic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopic" ):
                listener.exitTopic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopic" ):
                return visitor.visitTopic(self)
            else:
                return visitor.visitChildren(self)




    def topic(self):

        localctx = SlrParser.TopicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_topic)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(SlrParser.T__0)
            self.state = 56
            self.match(SlrParser.STRING)
            self.state = 57
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SearchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(SlrParser.LCB, 0)

        def optional_nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlrParser.Optional_nlContext)
            else:
                return self.getTypedRuleContext(SlrParser.Optional_nlContext,i)


        def query(self):
            return self.getTypedRuleContext(SlrParser.QueryContext,0)


        def yearRange(self):
            return self.getTypedRuleContext(SlrParser.YearRangeContext,0)


        def maxResults(self):
            return self.getTypedRuleContext(SlrParser.MaxResultsContext,0)


        def RCB(self):
            return self.getToken(SlrParser.RCB, 0)

        def getRuleIndex(self):
            return SlrParser.RULE_search

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSearch" ):
                listener.enterSearch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSearch" ):
                listener.exitSearch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSearch" ):
                return visitor.visitSearch(self)
            else:
                return visitor.visitChildren(self)




    def search(self):

        localctx = SlrParser.SearchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_search)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(SlrParser.T__1)
            self.state = 60
            self.match(SlrParser.LCB)
            self.state = 61
            self.optional_nl()
            self.state = 62
            self.query()
            self.state = 63
            self.yearRange()
            self.state = 64
            self.maxResults()
            self.state = 65
            self.match(SlrParser.RCB)
            self.state = 66
            self.optional_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(SlrParser.LB, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(SlrParser.STRING)
            else:
                return self.getToken(SlrParser.STRING, i)

        def RB(self):
            return self.getToken(SlrParser.RB, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = SlrParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(SlrParser.T__2)
            self.state = 69
            self.match(SlrParser.LB)
            self.state = 70
            self.match(SlrParser.STRING)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 71
                self.match(SlrParser.T__3)
                self.state = 72
                self.match(SlrParser.STRING)
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(SlrParser.RB)
            self.state = 79
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YearRangeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(SlrParser.NUMBER)
            else:
                return self.getToken(SlrParser.NUMBER, i)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_yearRange

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYearRange" ):
                listener.enterYearRange(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYearRange" ):
                listener.exitYearRange(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYearRange" ):
                return visitor.visitYearRange(self)
            else:
                return visitor.visitChildren(self)




    def yearRange(self):

        localctx = SlrParser.YearRangeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_yearRange)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(SlrParser.T__4)
            self.state = 82
            self.match(SlrParser.NUMBER)
            self.state = 83
            self.match(SlrParser.T__5)
            self.state = 84
            self.match(SlrParser.NUMBER)
            self.state = 85
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaxResultsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SlrParser.NUMBER, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_maxResults

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaxResults" ):
                listener.enterMaxResults(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaxResults" ):
                listener.exitMaxResults(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaxResults" ):
                return visitor.visitMaxResults(self)
            else:
                return visitor.visitChildren(self)




    def maxResults(self):

        localctx = SlrParser.MaxResultsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_maxResults)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(SlrParser.T__6)
            self.state = 88
            self.match(SlrParser.NUMBER)
            self.state = 89
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FiltersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(SlrParser.LCB, 0)

        def optional_nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlrParser.Optional_nlContext)
            else:
                return self.getTypedRuleContext(SlrParser.Optional_nlContext,i)


        def excludeKeywords(self):
            return self.getTypedRuleContext(SlrParser.ExcludeKeywordsContext,0)


        def minPages(self):
            return self.getTypedRuleContext(SlrParser.MinPagesContext,0)


        def languages(self):
            return self.getTypedRuleContext(SlrParser.LanguagesContext,0)


        def RCB(self):
            return self.getToken(SlrParser.RCB, 0)

        def getRuleIndex(self):
            return SlrParser.RULE_filters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilters" ):
                listener.enterFilters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilters" ):
                listener.exitFilters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilters" ):
                return visitor.visitFilters(self)
            else:
                return visitor.visitChildren(self)




    def filters(self):

        localctx = SlrParser.FiltersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_filters)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(SlrParser.T__7)
            self.state = 92
            self.match(SlrParser.LCB)
            self.state = 93
            self.optional_nl()
            self.state = 94
            self.excludeKeywords()
            self.state = 95
            self.minPages()
            self.state = 96
            self.languages()
            self.state = 97
            self.match(SlrParser.RCB)
            self.state = 98
            self.optional_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExcludeKeywordsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(SlrParser.LB, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(SlrParser.STRING)
            else:
                return self.getToken(SlrParser.STRING, i)

        def RB(self):
            return self.getToken(SlrParser.RB, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_excludeKeywords

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExcludeKeywords" ):
                listener.enterExcludeKeywords(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExcludeKeywords" ):
                listener.exitExcludeKeywords(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExcludeKeywords" ):
                return visitor.visitExcludeKeywords(self)
            else:
                return visitor.visitChildren(self)




    def excludeKeywords(self):

        localctx = SlrParser.ExcludeKeywordsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_excludeKeywords)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(SlrParser.T__8)
            self.state = 101
            self.match(SlrParser.LB)
            self.state = 102
            self.match(SlrParser.STRING)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 103
                self.match(SlrParser.T__3)
                self.state = 104
                self.match(SlrParser.STRING)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(SlrParser.RB)
            self.state = 111
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MinPagesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SlrParser.NUMBER, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_minPages

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinPages" ):
                listener.enterMinPages(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinPages" ):
                listener.exitMinPages(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinPages" ):
                return visitor.visitMinPages(self)
            else:
                return visitor.visitChildren(self)




    def minPages(self):

        localctx = SlrParser.MinPagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_minPages)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(SlrParser.T__9)
            self.state = 114
            self.match(SlrParser.NUMBER)
            self.state = 115
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LanguagesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(SlrParser.LB, 0)

        def LN(self, i:int=None):
            if i is None:
                return self.getTokens(SlrParser.LN)
            else:
                return self.getToken(SlrParser.LN, i)

        def RB(self):
            return self.getToken(SlrParser.RB, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_languages

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLanguages" ):
                listener.enterLanguages(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLanguages" ):
                listener.exitLanguages(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLanguages" ):
                return visitor.visitLanguages(self)
            else:
                return visitor.visitChildren(self)




    def languages(self):

        localctx = SlrParser.LanguagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_languages)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(SlrParser.T__10)
            self.state = 118
            self.match(SlrParser.LB)
            self.state = 119
            self.match(SlrParser.LN)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==4:
                self.state = 120
                self.match(SlrParser.T__3)
                self.state = 121
                self.match(SlrParser.LN)
                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(SlrParser.RB)
            self.state = 128
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnalyzeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(SlrParser.LCB, 0)

        def optional_nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SlrParser.Optional_nlContext)
            else:
                return self.getTypedRuleContext(SlrParser.Optional_nlContext,i)


        def summarize(self):
            return self.getTypedRuleContext(SlrParser.SummarizeContext,0)


        def extractFields(self):
            return self.getTypedRuleContext(SlrParser.ExtractFieldsContext,0)


        def keywordCloud(self):
            return self.getTypedRuleContext(SlrParser.KeywordCloudContext,0)


        def RCB(self):
            return self.getToken(SlrParser.RCB, 0)

        def getRuleIndex(self):
            return SlrParser.RULE_analyze

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnalyze" ):
                listener.enterAnalyze(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnalyze" ):
                listener.exitAnalyze(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnalyze" ):
                return visitor.visitAnalyze(self)
            else:
                return visitor.visitChildren(self)




    def analyze(self):

        localctx = SlrParser.AnalyzeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_analyze)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(SlrParser.T__11)
            self.state = 131
            self.match(SlrParser.LCB)
            self.state = 132
            self.optional_nl()
            self.state = 133
            self.summarize()
            self.state = 134
            self.extractFields()
            self.state = 135
            self.keywordCloud()
            self.state = 136
            self.match(SlrParser.RCB)
            self.state = 137
            self.optional_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SummarizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(SlrParser.LCB, 0)

        def optional_nl(self):
            return self.getTypedRuleContext(SlrParser.Optional_nlContext,0)


        def method(self):
            return self.getTypedRuleContext(SlrParser.MethodContext,0)


        def maxLength(self):
            return self.getTypedRuleContext(SlrParser.MaxLengthContext,0)


        def RCB(self):
            return self.getToken(SlrParser.RCB, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_summarize

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSummarize" ):
                listener.enterSummarize(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSummarize" ):
                listener.exitSummarize(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSummarize" ):
                return visitor.visitSummarize(self)
            else:
                return visitor.visitChildren(self)




    def summarize(self):

        localctx = SlrParser.SummarizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_summarize)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(SlrParser.T__12)
            self.state = 140
            self.match(SlrParser.LCB)
            self.state = 141
            self.optional_nl()
            self.state = 142
            self.method()
            self.state = 143
            self.maxLength()
            self.state = 144
            self.match(SlrParser.RCB)
            self.state = 145
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def METHID(self):
            return self.getToken(SlrParser.METHID, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_method

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod" ):
                return visitor.visitMethod(self)
            else:
                return visitor.visitChildren(self)




    def method(self):

        localctx = SlrParser.MethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_method)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(SlrParser.T__13)
            self.state = 148
            self.match(SlrParser.METHID)
            self.state = 149
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MaxLengthContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(SlrParser.NUMBER, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_maxLength

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMaxLength" ):
                listener.enterMaxLength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMaxLength" ):
                listener.exitMaxLength(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMaxLength" ):
                return visitor.visitMaxLength(self)
            else:
                return visitor.visitChildren(self)




    def maxLength(self):

        localctx = SlrParser.MaxLengthContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_maxLength)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(SlrParser.T__14)
            self.state = 152
            self.match(SlrParser.NUMBER)
            self.state = 153
            self.mandatory_nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtractFieldsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(SlrParser.LB, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(SlrParser.STRING)
            else:
                return self.getToken(SlrParser.STRING, i)

        def RB(self):
            return self.getToken(SlrParser.RB, 0)

        def mandatory_nl(self):
            return self.getTypedRuleContext(SlrParser.Mandatory_nlContext,0)


        def getRuleIndex(self):
            return SlrParser.RULE_extractFields

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExtractFields" ):
                listener.enterExtractFields(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExtractFields" ):
                listener.exitExtractFields(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExtractFields" ):
                return visitor.visitExtractFields(self)
            else:
                return visitor.visitChildren(self)




    def extractFields(self):
